Fixed missing space in player_start.php and removed old JS code from player.js

--- a/css/wiredrive-player.css
+++ b/css/wiredrive-player.css
@@ -172,6 +172,7 @@ ul.wd-thumb-list {
 	width: 9999%;
 	padding-top: 0;
 	padding-bottom: 0;
+	line-height: 0;
 }
 ul.wd-thumb-list li {
     float: left;
